activation/1.2/_index.md
---
title: "Jakarta Activation 1.2"
date: 2019-10-01
summary: "Initial release of Jakarta Activation"
---
Jakarta Activation defines a set of standard services to: determine the
MIME type of an arbitrary piece of data; encapsulate access to it;
discover the operations available on it; and instantiate the
appropriate bean to perform the operation(s).

This specification is a re-release of [JSR 925](http://jcp.org/en/jsr/detail?id=925) under the [EFSL](https://www.eclipse.org/legal/efsl/).

* [Jakarta Activation 1.2 Specification Document](./activation-spec-1.2.pdf) (PDF)
* [Jakarta Activation 1.2 Specification Document](./activation-spec-1.2.html) (HTML)
* [Jakarta Activation 1.2 Javadoc](./apidocs)
* [Jakarta Activation 1.2 TCK](https://download.eclipse.org/jakartaee/activation/1.2/jakarta-activation-tck-1.2.0.zip) ([sig](https://download.eclipse.org/jakartaee/activation/1.2/jakarta-activation-tck-1.2.0.zip.sig),[sha](https://download.eclipse.org/jakartaee/activation/1.2/jakarta-activation-tck-1.2.0.zip.sha256),[pub](https://jakarta.ee/specifications/jakartaee-spec-committee.pub))
  * For all TCK releases, see [download directory](https://download.eclipse.org/jakartaee/activation/1.2)
* Maven coordinates
  * [jakarta.activation:jakarta.activation-api:jar:1.2.2](https://central.sonatype.com/artifact/jakarta.activation/jakarta.activation-api/1.2.2/jar)

# Ballots

## Release Review

The Release Review Specification Committee Ballot concluded successfully on 2020-02-19 with the following results.

| Representative                                 | Representative for: | Vote |
|------------------------------------------------|---------------------|------|
| Kenji Kazumura, Michael DeNicola               | Fujitsu             |   1  |
| Dan Bandera, Kevin Sutter                      | IBM                 |   1  |
| Bill Shannon, Ed Bratt                         | Oracle              |   1  |
| Mark Wareham, Steve Millidge                   | Payara              |   1  |
| Scott Stark, Mark Little                       | Red Hat             |   1  |
| David Blevins, Cesar Hernandez                 | Tomitribe           |   1  |
| Ivar Grimstad                                  | EE4J PMC            |   1  |
| Alex Theedom                                   | Participant Members |      |
| Werner Keil                                    | Committer Members   |   1  |
|                                                | Total               |   8  |

# Compatible Implementations

* [Eclipse implementation of Jakarta Activation 1.2.2](https://github.com/eclipse-ee4j/jaf)
