activation/2.0/_index.md
---
title: "Jakarta Activation 2.0"
date: 2020-09-14
summary: "Release for Jakarta EE 9"
---
Jakarta Activation defines a set of standard services to: determine the
MIME type of an arbitrary piece of data; encapsulate access to it;
discover the operations available on it; and instantiate the
appropriate bean to perform the operation(s).

* [Jakarta Activation 2.0 Release Record](https://projects.eclipse.org/projects/ee4j.jaf/releases/2.0)
  * [Jakarta EE Platform 9 Release Plan](https://eclipse-ee4j.github.io/jakartaee-platform/jakartaee9/JakartaEE9ReleasePlan)
* [Jakarta Activation 2.0 Specification Document](./jakarta-activation-spec-2.0.pdf) (PDF)
* [Jakarta Activation 2.0 Specification Document](./jakarta-activation-spec-2.0.html) (HTML)
* [Jakarta Activation 2.0 Javadoc](./apidocs)
* [Jakarta Activation 2.0 TCK](https://download.eclipse.org/jakartaee/activation/2.0/jakarta-activation-tck-2.0.0.zip)
([sig](https://download.eclipse.org/jakartaee/activation/2.0/jakarta-activation-tck-2.0.0.zip.sig),
[sha](https://download.eclipse.org/jakartaee/activation/2.0/jakarta-activation-tck-2.0.0.zip.sha256),
[pub](https://raw.githubusercontent.com/jakartaee/specification-committee/master/jakartaee-spec-committee.pub))
    * Adds JDK 11 support [Jakarta Activation 2.0.1 TCK](https://download.eclipse.org/jakartaee/activation/2.0/jakarta-activation-tck-2.0.1.zip)  ([sig](https://download.eclipse.org/jakartaee/activation/2.0/jakarta-activation-tck-2.0.1.zip.sig),  [sha](https://download.eclipse.org/jakartaee/activation/2.0/jakarta-activation-tck-2.0.1.zip.sha256),  [pub](https://raw.githubusercontent.com/jakartaee/specification-committee/master/jakartaee-spec-committee.pub))
* Maven coordinates
  * [jakarta.activation:jakarta.activation-api:jar:2.0.1](https://search.maven.org/artifact/jakarta.activation/jakarta.activation-api/2.0.1/jar)
* [Change Log](./changelog)


# Compatible Implementations

* [Eclipse implementation of Jakarta Activation](https://eclipse-ee4j.github.io/jaf/)

# Ballots

## Plan Review

[Jakarta Activation 2.0 Release Record and Plan](https://projects.eclipse.org/projects/ee4j.jaf/releases/2.0/plan)

The Specification Committee Ballot concluded successfully on 2020-03-04 with the following results.

| Representative                                 | Representative for: | Vote |
|------------------------------------------------|---------------------|------|
| Kenji Kazumura, Michael DeNicola               | Fujitsu             |   1  |
| Dan Bandera, Kevin Sutter                      | IBM                 |   1  |
| Bill Shannon, Ed Bratt                         | Oracle              |   1  |
| Mark Wareham, Steve Millidge                   | Payara              |   1  |
| Scott Stark, Mark Little                       | Red Hat             |   1  |
| David Blevins, Cesar Hernandez                 | Tomitribe           |   1  |
| Ivar Grimstad                                  | EE4J PMC            |   1  |
| Alex Theedom                                   | Participant Members |      |
| Werner Keil                                    | Committer Members   |   1  |
|                                                | Total               |   8  |

The ballot was run in the [jakarta.ee-spec mailing list](https://www.eclipse.org/mhonarc/lists/jakarta.ee-spec/msg00629.html)

## Release Review

The Specification Committee Ballot concluded successfully on 2020-09-14 with the following results.


| Representative                                 | Representative for: | Vote |
|------------------------------------------------|---------------------|------|
|Kenji Kazumura	                                     |Fujitsu             |+1|
|Dan Bandera, Kevin Sutter                           |IBM                 |+1|
|Ed Bratt, Dmitry Kornilov                           |Oracle              |+1|
|Andrew Pielage, Matt Gill                           |Payara              |+1|
|Scott Stark, Mark Little                            |Red Hat             |+1|
|David Blevins, Jean-Louis Monteiro, Cesar Hernandez |Tomitribe           |+1|
|Ivar Grimstad                                       |EE4J PMC            |+1|
|Marcelo Ancelmo, Martijn Verburg                    |Participant Members |+1|
|Werner Keil                                         |Committer Members   |+1|
|Scott (Congquan) Wang                               |Enterprise Members  |+1|
|                                                    | Total              |10|
	
The ballot was run in the [jakarta.ee-spec mailing list](https://www.eclipse.org/lists/jakarta.ee-spec/msg00804.html)

